@@ -17,3 +17,5 @@
 	* Improvement: WWW-316 Infobox überarbeiten
 2010-11-25 - 0.0.42 - Nils K. Windisch <windisch@sub.uni-goettingen.de>
     * Fix: WWW-448 Anzeige von Seitenelementen nur aus der Hauptspalte in Infobox (Inhalte dieser Seite)
+2010-11-25 - 0.0.43 - Nils K. Windisch
+	* Fix:  WWW-467 Anzeige von Unterseiten in der Infobox, obwohl diese auf "exclude from menu" gesetzt sind
